open some vertical space

--- a/audio.html
+++ b/audio.html
@@ -3,6 +3,9 @@
   <head>
     <title>record audio</title>
     <meta charset="UTF-8">
+<style type="text/css">
+li { margin: 10px 0; }
+</style>
   </head>
   <body>
 <h1>Record audio of your name</h1>
