record again perhaps

--- a/audio.html
+++ b/audio.html
@@ -34,7 +34,7 @@ File sizes:
 <span id="file_size">No file chosen</span>.
 <span class="hide" id="cond_display">
 If the file size is more than about two hundred thousand (200,000),
-please choose a smaller file.
+please record again and/or choose a smaller file.
 </span>
 </li>
 <li>Replay to make sure you sound okay:
