--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,5 +7,8 @@
     <link rel="icon"type="image/png"href="/favicon-16x16.png">
   </head>
   <body>
+    Click
+    <a href="https://bruceatbyu.com/s/OITapp">here</a>
+    to login to "Calling Me By Name"
   </body>
 </html>
