--- a/homepage/credential.html
+++ b/homepage/credential.html
@@ -49,7 +49,7 @@ body {
 <script type="text/javascript" src="https://manifold.picolabs.io:9090/js/qrcode.js"></script>
 <script type="text/javascript">
 $(function(){
-  $.getJSON("http://byname.byu.edu:3000/sky/event/ckrxkp70x001lbkpb01pvgk5g/none/byu_hr_login/need_verification", function(d){
+  $.getJSON("https://byname.byu.edu:8080/sky/event/ckrxkp70x001lbkpb01pvgk5g/none/byu_hr_login/need_verification", function(d){
     if (d && d.directives && d.directives.length == 1
         && d.directives[0].name == "Proof request"
         && d.directives[0].options
@@ -80,9 +80,9 @@ $(function(){
           console.log(sec)
           secSpan.textContent = ""+sec
           timer = setTimeout(function(){
-            $.getJSON("http://byname.byu.edu:3000/sky/event/ckrxkp70x001lbkpb01pvgk5g/none/byu_hr_login/verification_check_request?verificationId="+verificationId, function(d){
+            $.getJSON("https://byname.byu.edu:8080/sky/event/ckrxkp70x001lbkpb01pvgk5g/none/byu_hr_login/verification_check_request?verificationId="+verificationId, function(d){
               netid = verified(d)
-              if(netid) location = 'http://byname.byu.edu:3000/sky/event/ckrxkp70x001lbkpb01pvgk5g/none/byu_hr_login/needed'+'?netid='+netid
+              if(netid) location = 'https://byname.byu.edu:8080/sky/event/ckrxkp70x001lbkpb01pvgk5g/none/byu_hr_login/needed'+'?netid='+netid
               f1 = f2
               f2 = sec
               var fn = f1 + f2
