--- a/homepage/index.html
+++ b/homepage/index.html
@@ -38,9 +38,8 @@ body {
   vertical-align: middle;
   margin: 23px 20px 0 0;
 }
-#byu_bar .login a {
-  color: inherit;
-  text-decoration: none;
+#byu_bar .login:hover {
+  cursor: pointer;
 }
 </style>
     <style type="text/css">
@@ -60,20 +59,18 @@ body {
       }
     </style>
 <script type="text/javascript">
-window.addEventListener('load', function(){
   var matches = document.cookie.match(/(^| )fe.saml.netId=([^;|]+)/);
   if(matches){
     var netid = matches[2];
     if(netid) location = 'https://byname.byu.edu:8080/sky/event/ckyk9tjow02tekipbastj4bz6/none/byu_hr_login/needed'+'?netid='+netid
   }
-});
 </script>
   </head>
   <body>
 <div id="byu_bar">
 <img class="logo" src="https://raw.githubusercontent.com/Picolab/fully-sharded-database/main/images/BYU%20logo.svg">
 <span class="title">Calling Me By Name</span>
-<span class="login">Sign In</span>
+<span class="login" onclick="location.reload()">Sign In</span>
 <img class="user-circle" src="https://raw.githubusercontent.com/Picolab/fully-sharded-database/main/images/user-circle-o-white.svg">
 </div>
 <h1>Login</h1>
@@ -82,7 +79,7 @@ window.addEventListener('load', function(){
 <div id="loginchoice">
 <button onclick="location='credential.html'">Login with credential</button>
 <p>OR</p>
-<button title="not available" disabled>Login with password</button>
+<button onclick="location.reload()">Login with password</button>
 </div>
   </body>
 </html>
