--- a/homepage/index.html
+++ b/homepage/index.html
@@ -81,7 +81,7 @@ function trySSO(){
 <img class="user-circle" src="https://raw.githubusercontent.com/Picolab/fully-sharded-database/main/images/user-circle-o-white.svg">
 </div>
 <h1>Login</h1>
-<p>Please demonstrate that you a member of the BYU community.</p>
+<p>Please demonstrate that you are currently a member of the BYU community.</p>
 <p>To obtain a credential, visit <a href="https://ycred.byu.edu" target="_blank">YCred.byu.edu</a>.</p>
 <div id="loginchoice">
 <button onclick="location='credential.html'">Login with credential</button>
