--- a/homepage/index.html
+++ b/homepage/index.html
@@ -71,14 +71,14 @@ For example, visit
 <a href="https://mendix.byu.edu" target="_blank">Mendix.byu.edu</a>
 and sign in; then return here and reload this page.
 </p>
-<h2>Experimental</h2>
-<p>If you possess a verifiable credential
+<h2><del>Experimental</del></h2>
+<p><del>If you possess a verifiable credential
 that states that you are a member of the BYU community,
 and you are holding it in an agent on your mobile phone,
-you can use it to identify yourself.
+you can use it to identify yourself.</del>
 <p>
-<button onclick="if(confirm('Click OK if you possess a verifiable credential in an app on your smartphone'))location='credential.html'">Login with credential</button>
+<button onclick="if(confirm('Click OK if you possess a verifiable credential in an app on your smartphone'))location='credential.html'" disabled>Login with credential</button>
 </p>
-<p>You can obtain a verifiable credential at <a href="https://ycred.byu.edu" target="_blank">YCred.byu.edu</a>.</p>
+<p><del>You can obtain a verifiable credential at <a href="https://ycred.byu.edu" target="_blank" style="pointer-events:none">YCred.byu.edu</a>.</del></p>
   </body>
 </html>
